fix замечания,
