# webapi/docs/swagger.json
@@ -163,10 +163,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Character"
-                            }
+                            "$ref": "#/definitions/models.Characters"
                         }
                     }
                 }
@@ -301,6 +298,17 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "models.Characters": {
+            "type": "object",
+            "properties": {
+                "characters": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Character"
+                    }
                 }
             }
         },
